1.16
remove curl dependences
add version info in configView
add unique column in database for messages (id_peer_id_msg_id_)
add clear chaches in configView
add chat scrolldown on new message

1.15
messages chaching
fix multi socket hell 

1.14
fix TextView bounds
download files with stream - not NSData
font attributes in messages

1.13
some fixes to in socket queue

1.12
2-factor authorization

1.11
2025-02-15 preview for documents and video
2025-02-15 time sync fix 

1.10
2025-02-10 some fixes

1.9
2025-02-07 chat message pagification fix, voice messages in chats

1.8
2025-02-06 version - archive support
2025-02-05 new libtg engine
2025-01-28 full-sized photos in chats 
2025-01-13 keyboard with accessoryview fix
2024-12-07 chat view
2024-12-03 list of chats
2024-11-03 start of develop